--- a/public/css/themes/default/vars.scss
+++ b/public/css/themes/default/vars.scss
@@ -10,3 +10,4 @@
 @import "../../../../bower_components/bootstrap/scss/_navbar.scss";
 @import "../../../../bower_components/bootstrap/scss/_dropdown.scss";
 @import "../../../../bower_components/bootstrap/scss/_nav.scss";
+@import "../../../../bower_components/bootstrap/scss/_reboot.scss";
