--- a/views/index.pug
+++ b/views/index.pug
@@ -471,7 +471,7 @@ html
                     #pewrap
                         table#pe-song-list.table.table-hover
                             tbody#pe-song-list-tbody.append.connected
-            #pe-tab.none Resume playlist editor
+            #pe-tab.bg-dark.text-light.none Resume playlist editor
 
         if (config.testing)
             #testing.card.card-default
