--- a/public/css/themes/materialish/vars.scss
+++ b/public/css/themes/materialish/vars.scss
@@ -135,3 +135,7 @@ $material-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.1
 thead tr {
     background: $body-bg;
 }
+
+p {
+    margin-bottom: 0.1rem;
+}
