--- a/views/index.pug
+++ b/views/index.pug
@@ -47,7 +47,7 @@ html
                         hr
                         h4 Libraries used in #{pack.name}
                         p
-                            a(href='https://github.com/hughsk/komponist', target='_blank', rel="noopener") Komponist
+                            a(href='https://www.npmjs.com/package/mpc-js', target='_blank', rel="noopener") mpc-js
                             |  - MPD controller
                         p
                             a(href='https://jquery.com/', target='_blank', rel="noopener") jQuery
@@ -140,10 +140,6 @@ html
                                     label.form-check-label(title='Stops showing the warning icon when consume mode is enabled')
                                         input#use-consume-warning.form-check-input(type='checkbox')
                                         | Show MPD's consume warning
-                                .form-check
-                                    label.form-check-label(title='Note: some errors you may see are false-positives.')
-                                        input#show-all-errors.form-check-input(type='checkbox')
-                                        | Debug: Show all errors
                             h3 Server Settings
                             .form-group
                                 label Track crossfade (0 - 10 seconds)
