--- a/views/index.pug
+++ b/views/index.pug
@@ -19,7 +19,7 @@ html
     script(src='/js/komponist.build.js')
     script(src='/js/jQuery_sortColumn.js')
     script(src='/js/jquery-multiselect.js')
-    script(src='/toastr/toastr.min.js')
+    script(src='/toastr/toastr.js')
     script(src='/dragula/dragula.min.js')
     script(src='/jquery-contextmenu/jquery.contextMenu.min.js')
     script(src='/mpcparty.js')
