Fix save input not showing when no stored playlist

--- a/views/index.pug
+++ b/views/index.pug
@@ -161,6 +161,7 @@ html
           th.col-playlists-songs Songs
           th
         tbody.append
+      .gen
 
 
     #playlist-open-modal.modal.fade(tabindex='-1')
